k8s-manifests/overlays/staging/superapp/client/ips/patch/qa-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ips
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ips
        image: harbor.cbe.com.et/cbe-superapp/ips-qa:latest
        imagePullPolicy: Always
